styling navbar for desktop and adding a shimmer effect on images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         >Gallery</a>
       </li>
       <li class="menu-item"><a href="#">About us</a></li>
-      <li class="menu-item"><a href="#">Contact</a></li>
+      <li class="menu-item"><a href="#booking-section">Contact</a></li>
     </ul>
     <!--Hamburger icon -->
     <div
@@ -103,6 +103,7 @@
           <img
             src="./assets/starlight-sparkle.png"
             alt="Image of Starlight Sparkle"
+            class="shimmering-image"
           >
         </figure>
 
@@ -200,6 +201,7 @@
           <img
             src="./assets/rainbow-dream.png"
             alt="Image of Rainbow Dream"
+            class="shimmering-image"
           >
         </figure>
 
@@ -296,6 +298,7 @@
           <img
             src="./assets/moonshadow.png"
             alt="Moonshadow"
+            class="shimmering-image"
           >
         </figure>
 
@@ -391,6 +394,7 @@
           <img
             src="./assets/auora-mist.png"
             alt="Aurora Mist"
+            class="shimmering-image"
           >
         </figure>
 
@@ -487,6 +491,7 @@
           <img
             src="./assets/whisperwind.png"
             alt="Whisperwind"
+            class="shimmering-image"
           >
         </figure>
 
@@ -583,6 +588,7 @@
           <img
             src="./assets/sunshine-glow.png"
             alt="Sunshine Glow"
+            class="shimmering-image"
           >
         </figure>
 
@@ -678,6 +684,7 @@
           <img
             src="./assets/midnight-mirage.png"
             alt="Midnight Mirage"
+            class="shimmering-image"
           >
         </figure>
 
