--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
       )"
         >Home</a>
       </li>
-      <li class="menu-item"><a href="#booking-section">Book a Unicorn</a></li>
       <li class="menu-item">
         <a
           href="#gallery-section"
           onclick="changeFeaturedUnicorn()"
         >Gallery</a>
+      <li class="menu-item"><a href="#booking-section">Book a Unicorn</a></li>
       </li>
-      <li class="menu-item"><a href="#">About us</a></li>
       <li class="menu-item"><a href="#booking-section">Contact</a></li>
     </ul>
     <!--Hamburger icon -->
@@ -175,6 +174,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-starlight-sparkle"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -272,6 +273,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-rainbow-dream"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -368,6 +371,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-moonshadow"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -465,6 +470,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-aurora-mist"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -562,6 +569,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-whisperwind"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -658,6 +667,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-sunshine-glow"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -756,6 +767,8 @@
           <a
             class="button button-book"
             href="#booking-section"
+            id="button-book-midnight-mirage"
+            onclick=bookUnicorn(this.id)
           >
             Book Now
           </a>
@@ -846,15 +859,15 @@
         <legend>Rental Details</legend>
 
         <div class="unicorn-wrapper">
-          <label for="unicorn">Select your preferred unicorn</label>
+          <label for="unicorn-select">Select your preferred unicorn</label>
           <select
             name="unicorn"
-            id="unicorn"
+            id="unicorn-select"
           >
             <option value="starlight-sparkle">Starlight Sparkle</option>
             <option value="rainbow-dream">Rainbow Dream</option>
             <option value="moonshadow">Moonshadow</option>
-            <option value="auora-mist">Aurora Mist</option>
+            <option value="aurora-mist">Aurora Mist</option>
             <option value="whisperwind">Whisperwind</option>
             <option value="sunshine-glow">Sunshine Glow</option>
             <option value="midnight-mirage">Midnight Mirage</option>
